<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Common.LoginSignup.MakeSelection"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:onClick="callBackScreenFromMakeSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/general_back_icon"
            android:padding="5dp"/>



        <TextView
            android:id="@+id/make_selection_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/make_selection_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection_detail"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli"/>


        <RelativeLayout
            android:id="@+id/make_selection_sms_box"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/lightWhite"
            android:padding="10dp">


            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/mobile_custom_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textSize="20sp"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_marginTop="48dp"/>

            <TextView
                android:id="@+id/mobile_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+923332562233"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_below="@id/mobile_title"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:onClick="callOTPScreenFromMakeSelection"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/make_selection_mail_box"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightWhite"
            android:padding="10dp">


            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:src="@drawable/mail_custom_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_mail"
                android:textSize="20sp"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_marginTop="48dp"/>

            <TextView
                android:id="@+id/mail_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="support@gmail.com"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_below="@id/mail_title"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"/>


        </RelativeLayout>


    </LinearLayout>

</ScrollView>